--- a/ProyectoQuiniela/src/main/webapp/view/css/style.css
+++ b/ProyectoQuiniela/src/main/webapp/view/css/style.css
@@ -8570,3 +8570,8 @@ body.md-skin {
   max-width: 20%;
   max-height: 20%;
 }
+
+.table-borderless td,
+.table-borderless th {
+    border: none;
+}
